@@ -45,7 +45,7 @@ This subpart is used to display the card number information dialog before the tr
 <div class="transactor-table">
 	<div class="transactor-row">
 		<div class="transactor-cell">
-			<a href="http://###TRANSACTOR_WWW###" target="_blank"><img src="###TRANSACTOR_IMAGE###" /></a>
+			<a href="http://###TRANSACTOR_WWW###" target="_blank">###TRANSACTOR_IMAGE###</a>
 		</div>
 		<div class="transactor-cell transactor-info">
 			###TRANSACTOR_INFO###
